--- a/.laptop-bashrc
+++ b/.laptop-bashrc
@@ -12,6 +12,7 @@ esac
 alias i3="vim ~/.config/i3/config"
 alias school="cd ~/Documents/school/sem5"
 alias weather="~/projects/weather-shell/./weather-shell.sh"
+alias neofetch="neofetch --ascii_distro popos_small"
 
 # don't put duplicate lines or lines starting with space in the history.
 # See bash(1) for more options
